--- a/style.css
+++ b/style.css
@@ -438,6 +438,30 @@ main {
   font-size: 1.2rem;
   border-radius: 8px;
   color: var(--just-white);
+  background-color: var(--warm-black);
+}
+.recommended2 {
+  position: absolute;
+  width: 120px;
+  height: 31px;
+  padding: 6px;
+  top: -15px;
+  left: calc(50% - 60px);
+  font-size: 1.2rem;
+  border-radius: 8px;
+  color: var(--just-white);
+  background-color: var(--secondary-blue);
+}
+.recommended3 {
+  position: absolute;
+  width: 120px;
+  height: 31px;
+  padding: 6px;
+  top: -15px;
+  left: calc(50% - 60px);
+  font-size: 1.2rem;
+  border-radius: 8px;
+  color: var(--just-white);
   background-color: var(--bitcoin-orange);
 }
 .plan-card--title {
@@ -462,4 +486,26 @@ main {
 .plan-card-saving {
   font-size: 1.2rem;
   color: #757575;
+}
+
+.plan-card-ca {
+  width: 150px;
+  height: 48px;
+  margin-top: 20px;
+  background-color: #faf8f7;
+  border: 2px solid var(--bitcoin-orange);
+  border-radius: 4px;
+  font-size: 1.4rem;
+  font-weight: bold;
+  line-height: 1.8rem;
+  color: var(--black);
+  font-family: 'DM Sans', sans-serif;
+}
+
+.plan-card-ca span {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  background-image: url('./assets/icons/orange-right-arrow.svg');
+  vertical-align: text-bottom;
 }
