--- a/style.css
+++ b/style.css
@@ -418,11 +418,12 @@ main {
 }
 .plans-container--card {
   position: relative;
+  scroll-snap-align: center;
   width: 70%;
-  min-width: 230px;
+  min-width: 190px;
   max-width: 300px;
   height: 250px;
-  margin: 50px auto;
+  margin: 50px 9px 0;
   padding: 0 15px;
   background-color: var(--just-white);
   border-radius: 15px;
@@ -508,4 +509,12 @@ main {
   height: 20px;
   background-image: url('./assets/icons/orange-right-arrow.svg');
   vertical-align: text-bottom;
+}
+.plans-container--slider {
+  display: flex;
+  /*gap: 50px;*/
+  height: 316px;
+  overflow-x: scroll;
+  overscroll-behavior-x: contain;
+  scroll-snap-type: x proximity;
 }
